--- a/templates/500.html
+++ b/templates/500.html
@@ -9,7 +9,7 @@
 <body>
     <center>
         <h1>500 Error</h1>
-        <p>Internal Server Error</p>
+        <p>Internal Server Error(s)</p>
     </center>
 </body>
 </html>
