--- a/templates/demo.html
+++ b/templates/demo.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Demo{% endblock title %}
+
+{% block body %}
+
     <h1>Demo Page</h1>
     
     <p>{{ data }}</p>
@@ -25,5 +22,5 @@
     
     <br>
     {{ x }}
-</body>
-</html>
+
+{% endblock body %}
