--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,9 @@
 <body>
     {% include 'navbar.html' %}
 
-    <div class="container-fluid">
+    <div class="container">
         {% block body %}
+        
         {% endblock body %}
     </div>
 
