--- a/templates/name.html
+++ b/templates/name.html
@@ -3,15 +3,13 @@
 {% block title %}Username{% endblock title %}
 
 {% block body %}
-    {% for message in get_flashed_messages() %}
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            {{ message }} {{ name }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-    {% endfor %}
 
     {% if name %}
         <h1>Hello {{ name }}</h1>
+        <br/>
+        <img src="{{ url_for('static', filename='images/logo.png')}}">
+        <br/><br/>
+        <p id="demo">This is my stuff</p>
     {% else %}
         <h3>What is Your Name?</h3>
         <br/>
@@ -24,4 +22,6 @@
         </form>
     {% endif %}
     
+    <script src="{{ url_for('static', filename='js/script.js')}}"></script>
+
 {% endblock body %}
