--- a/templates/home.html
+++ b/templates/home.html
@@ -3,5 +3,15 @@
 {% block title %}Home{% endblock title %}
 
 {% block body %}
-    <h1>Hello World</h1>
+     <div class="alert alert-success alert-dismissible fade show" role="alert">
+        {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    {% for message in messages %}
+                        <p>{{message}}</p>
+                    {% endfor %}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                {% endif %}
+            {% endwith %}
+    </div>
+    <h3>Hello & Welcome Guest</h3>
 {% endblock body %}
